--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
-{% extends 'base.html' %}
-
-{% block content %}
-<h1>Homepage.</h1>
-{% endblock %}
+<h1>Message board homepage</h1>
+	<ul>
+	{% for post in object_list %}
+		<li>{{ post }}</li>
+	{% endfor %}
+</ul>
